# sre-ai-agent

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  RUN_DEMO.md  demo-e2e.ps1  docker-compose.yml  pyproject.toml  restart-services.ps1  simulation_test.py  start-all-services.ps1  start-frontend.ps1  start.ps1  test-system.ps1  verify-startup.ps1
app/: __init__.py  main.py
app/adapters/: __init__.py  base.py  exceptions.py  registry.py
app/adapters/providers/: __init__.py
app/agents/: __init__.py  base.py
app/connectors/: __init__.py  base.py
app/core/: config.py  dependencies.py  llm.py
app/knowledge/: embeddings.py  graph.py  indexer.py  memory.py  models.py
app/orchestration/: __init__.py  graph.py  router.py
backend/: .env.example  Dockerfile  REFACTORING.md  REFACTORING_COMPLETE.md  add_related_knowledge_column.py  check_latest.py  check_status.py  check_stuck.py  clean_incidents.py  fix_indentation.py  migrate_add_context.py  migrate_add_service_name.py  requirements-minimal.txt  requirements.txt  test_api.py
backend/app/: main.py
backend/app/api/: demo.py  (+9 more)
connectors/: __init__.py  registry.py
connectors/aws/: __init__.py  connector.py
connectors/github/: __init__.py  connector.py
connectors/sdk/: __init__.py  base.py
connectors/slack/: __init__.py  connector.py
frontend/: .env.example  README.md  components.json  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
init-scripts/: 01-init-pgvector.sql
scripts/: setup.ps1  setup.sh  verify.py
services/action-engine/: main.py
services/admin-service/: main.py
services/ai-engine/: main.py  requirements.txt
services/alert-service/: main.py
services/api-gateway/: main.py  requirements.txt
services/auth-service/: main.py  requirements.txt
services/eraser-service/: main.py
services/eval-service/: main.py
services/investigation-engine/: main.py  requirements.txt
services/knowledge-graph/: main.py
services/notification-service/: main.py
shared-libs/: README.md  alembic.ini  pyproject.toml  requirements.txt
shared-libs/alembic/: env.py
shared-libs/shared/: __init__.py  config.py  database.py  logging.py
shared-libs/shared/auth/: __init__.py  jwt.py  middleware.py
shared-libs/shared/events/: __init__.py  consumer.py  producer.py  schemas.py
shared-libs/shared/models/: __init__.py  action.py  alert.py  audit.py  connector.py  investigation.py  knowledge.py  notification.py  policy.py  tenant.py  user.py
temporal-config/: development-sql.yaml
(+218 files in other folders)
