[tool.poetry]
name = "sre-agent"
version = "0.1.0"
description = "Enterprise-grade multi-tenant SaaS platform for SRE AI Agent"
authors = ["Your Team <team@example.com>"]
readme = "README.md"
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
structlog = "^24.1.0"
python-json-logger = "^2.0.7"
asyncpg = "^0.29.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}
neo4j = "^5.16.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
boto3 = "^1.34.0"
botocore = "^1.34.0"
httpx = "^0.26.0"
apscheduler = "^3.10.4"
crewai = "^0.11.0"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
langchain-community = "^0.0.13"
faiss-cpu = "^1.7.4"
pinecone-client = "^3.0.0"
langgraph = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
ruff = "^0.1.11"
black = "^23.12.1"
moto = {extras = ["all"], version = "^5.0.0"}
freezegun = "^1.4.0"
respx = "^0.20.2"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
